---
source: cubesql/src/compile/test/test_introspection.rs
expression: "execute_query(r#\"\n            SELECT *\n            FROM pg_auth_members\n            ORDER BY roleid\n            \"#.to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+--------+--------+---------+--------------+
| roleid | member | grantor | admin_option |
+--------+--------+---------+--------------+
+--------+--------+---------+--------------+
